--- a/html.html
+++ b/html.html
@@ -47,8 +47,8 @@
         </iframe>
     </div>
     <script>
-        var url = "https://www.bihaijx.com/kkm3u8.php?";
-        var path = "url=https://pptv.com-h-pptv.com/20190318/16307_409b8b0c/1000k/hls/index.m3u8";
+        var url = "https://www.bihaijx.com/kkm3u8.php?url=";
+        var path = "https://iqiyi.com-t-iqiyi.com/20190322/445_5319c527/1000k/hls/index.m3u8";
         var src = url + path;
         $(".tvhou").attr({
             "src": src
